# automi_simulation

./: README.md
automi_control/: CMakeLists.txt  README.md  package.xml
automi_control/config/: automi_control.yaml  automi_control_master.yaml
automi_control/launch/: automi_control.launch
automi_description/: CMakeLists.txt  README.md  model.config  package.xml
automi_description/meshes/: AX18-hand.stl  AX18.stl  AX18_Frame.stl  MX28.stl  MX64.stl  body_core.stl  body_hip.stl  chest.stl  foot.stl  head.stl  lower_leg.stl  shoulder.stl  thigh.stl  upper_leg.stl
automi_description/urdf/: arm.urdf.xacro  automi.urdf  automi.urdf.xacro  dynamixels.urdf.xacro  leg.urdf.xacro  torso.urdf.xacro  transmissions.urdf.xacro
automi_gazebo/: CMakeLists.txt  README.md  package.xml  setup.py
automi_gazebo/launch/: automi_gazebo.launch
automi_gazebo/src/: checkcontroller.cpp
automi_gazebo/src/automi_gazebo/: automi.py
