<?xml version="1.0"?>
<package>
  <name>automi_control</name>
  <version>1.0.0</version>
  <description>The automi_control package</description>

  <maintainer email="arunim@todo.todo">Arunim Joarder</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/automi_control</url> -->

  <author email="arunim@todo.todo">Arunim Joarder</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>automi_description</run_depend>
<!--  <run_depend>gazebo_ros</run_depend> -->


</package>